--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
     clock.style.alignItems = 'center';
 
     console.dir(clock.style);
-
+    // new Date()를 이용하여 시간 정보 불러오기
     function getTime(){
         const time = new Date();
         const year = time.getFullYear();
