시계 사이즈 조정

--- a/main.html
+++ b/main.html
@@ -17,6 +17,8 @@
     clock.style.display = 'flex';
     clock.style.justifyContent = 'center';
     clock.style.alignItems = 'center';
+    // 사이즈 조정
+    clock.style.fontSize = '80px';
 
     console.dir(clock.style);
     // new Date()를 이용하여 시간 정보 불러오기
